<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DGq-Zg-Kd9">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Start Screen-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="Start Screen" id="BYZ-38-t0r" customClass="ViewController" customModule="w6d4_demo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="SHw-kT-TjM">
                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oYn-tq-UYe">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="201"/>
                                        <accessibility key="accessibilityConfiguration" identifier="test1Button"/>
                                        <state key="normal" title="Test 1"/>
                                        <connections>
                                            <segue destination="PQF-mK-Ql0" kind="show" id="qS4-9U-7F4"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ijw-gA-Jem">
                                        <rect key="frame" x="0.0" y="201" width="375" height="201"/>
                                        <state key="normal" title="Test 2"/>
                                        <connections>
                                            <segue destination="QyC-zZ-P0E" kind="show" id="PL1-Lq-FQP"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zq7-fz-Ywl">
                                        <rect key="frame" x="0.0" y="402" width="375" height="201"/>
                                        <state key="normal" title="Test 3"/>
                                        <connections>
                                            <segue destination="de7-2G-uTh" kind="show" id="Sph-qM-J00"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="SHw-kT-TjM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5VP-Zs-DRT"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SHw-kT-TjM" secondAttribute="trailing" id="WbK-Uk-pbg"/>
                            <constraint firstItem="SHw-kT-TjM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="cVe-Wb-GCz"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="SHw-kT-TjM" secondAttribute="bottom" id="jkV-m5-edT"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="c88-s3-VvG"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="476" y="132.68365817091455"/>
        </scene>
        <!--Screen 3-->
        <scene sceneID="BnT-OG-2xR">
            <objects>
                <viewController title="Screen 3" id="de7-2G-uTh" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Lgi-Ux-v1v">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="0.99231303770000001" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <viewLayoutGuide key="safeArea" id="vRV-7z-ecC"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="5qh-KK-NS9" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1452" y="516"/>
        </scene>
        <!--Screen 1-->
        <scene sceneID="DIv-k0-bKh">
            <objects>
                <viewController title="Screen 1" id="PQF-mK-Ql0" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="0Lh-XA-v3D">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="0.0" green="0.082061364679999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <viewLayoutGuide key="safeArea" id="8T8-za-XCr"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="W9C-Rm-Lqk" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1452" y="-251"/>
        </scene>
        <!--Screen 2-->
        <scene sceneID="rTa-gn-HIk">
            <objects>
                <viewController title="Screen 2" id="QyC-zZ-P0E" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="okk-oQ-QRq">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="0.058823529409999999" green="0.66666666669999997" blue="0.20784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <viewLayoutGuide key="safeArea" id="KQC-ru-GE2"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="VWa-CJ-HKo" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2175" y="133"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="NWh-w5-S9Z">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DGq-Zg-Kd9" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gJ5-uf-z8M">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Nh4-AH-5Ob"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ltM-gp-cQB" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-361" y="133"/>
        </scene>
    </scenes>
</document>
